test/invalid-syntax/64361_wrong_two_dots_placement/wrong_two_dots_placement.agu
-- Author: fc64361 , Gustavo Henriques

let even (x) Int : -> Bool = -- syntax error: the two dots are placed in the wrong place
x == 0 || odd(x - 1)